erDiagram
  UPLOADED_AUDIO {
    INTEGER uploaded_audio_id PK
    TEXT original_filename
    TEXT stored_path UK
    TEXT file_hash UK
    TEXT mime_type
    INTEGER sample_rate_hz
    INTEGER channels
    INTEGER bit_depth
    REAL duration_sec
    INTEGER file_size_bytes
    TEXT uploaded_at
    TEXT notes
  }

  MODEL {
    INTEGER model_id PK
    TEXT model_name
    TEXT version
    TEXT architecture
    TEXT framework
    TEXT checkpoint_path UK
    TEXT config_path
    TEXT description
    INTEGER is_active
    TEXT created_at
  }

  SEPARATION_JOB {
    INTEGER job_id PK
    INTEGER uploaded_audio_id FK
    INTEGER model_id FK
    TEXT status
    TEXT requested_at
    TEXT started_at
    TEXT completed_at
    INTEGER processing_time_ms
    TEXT parameters_json
    TEXT error_message
  }

  SEPARATION_RESULT {
    INTEGER result_id PK
    INTEGER job_id FK
    TEXT heart_file_path UK
    TEXT lung_file_path UK
    INTEGER output_sample_rate_hz
    REAL output_duration_sec
    INTEGER heart_file_size_bytes
    INTEGER lung_file_size_bytes
    TEXT created_at
  }

  EVALUATION_METRIC {
    INTEGER metric_id PK
    INTEGER result_id FK
    TEXT metric_name
    TEXT metric_scope
    REAL metric_value
    TEXT metric_unit
    TEXT reference_type
    TEXT recorded_at
  }

  SYSTEM_LOG {
    INTEGER log_id PK
    INTEGER job_id FK
    TEXT log_level
    TEXT source_component
    TEXT event_type
    TEXT message
    TEXT created_at
  }

  UPLOADED_AUDIO ||--o{ SEPARATION_JOB : "has jobs"
  MODEL ||--o{ SEPARATION_JOB : "runs with"
  SEPARATION_JOB ||--o| SEPARATION_RESULT : "produces"
  SEPARATION_RESULT ||--o{ EVALUATION_METRIC : "records"
  SEPARATION_JOB |o--o{ SYSTEM_LOG : "has optional logs"
